@startuml Target_HAL_Class_Diag

Title Target HAL Class Diagram

package "Interfaces" as interfaces {
    interface "IButton" as iButton {
        + {abstract} isShortPressed() : bool
        + {abstract} isLongPressed()  : bool
        + {abstract} waitForRelease() : void
    }

    interface "IBattery" as iBattery {
        + {abstract} getBatteryVoltage() : uint32_t
        + {abstract} getChargeLevel()    : uint8_t
    }

    interface "IRobot" as iRobot {
        + {abstract} init() : bool
        + {abstract} process() : bool
        + {abstract} getStream() : Stream
        + {abstract} reset() : void
    }

    interface "INetwork" as iNetwork {
        + {abstract} init() : bool
        + {abstract} process() : bool
        + {abstract} getStream() : Stream
    }

    interface "ILed" as iLed {
        + {abstract} enable(enableIt : bool) : void
    }

    interface "IGps" as iGps {
        + {abstract} getGpsData() : GpsData
    }
}

package "HALTargetV1" as halV1 {
    class Board << namespace >> {
        + getButton() : IButton&
        + getBattery() : IBattery&
        + getRobot() : IRobot&
        + getNetwork() : INetwork&
        + getLedRed() : ILed&
        + getLedGreen() : iLed&
        + getLedBlue() : ILed&
        + getGps() : nullptr
    }

    class "USB-Host" as Robot
}

package "HALTargetCommon" as halCommon {
    class "Button" as Button
    class "Battery" as Battery
    class "MQTT" as Network
    class "LedRed" as LedRed
    class "LedGreen" as LedGreen
    class "LedBlue" as LedBlue

    iButton <|... Button : <<realize>>
    iBattery <|... Battery : <<realize>>
    iRobot <|... Robot : <<realize>>
    iNetwork <|... Network : <<realize>>
    iLed <|... LedRed : <<realize>>
    iLed <|... LedGreen : <<realize>>
    iLed <|... LedBlue : <<realize>>
}

package "Libraries" as libs
{
    class "PubSubClient" as NetworkLib
    class "USB_Host_Shield_2.0" as RobotLib

    package "Arduino" as arduino {
        class "IO" as IO
        class "Stream" as Stream
    }
}

Board *--> Button
Board *--> Battery
Board *--> Robot
Board *--> Network
Board *--> LedRed
Board *--> LedGreen
Board *--> LedBlue

Robot *--> RobotLib
Network *--> NetworkLib

Robot *--> Stream
Network *--> Stream
Button ..> IO : <<use>>
Battery ..> IO : <<use>>
LedRed ..> IO : <<use>>
LedGreen ..> IO : <<use>>
LedBlue ..> IO : <<use>>

@enduml